Removed meet & greets

--- a/cams-landing-page.html
+++ b/cams-landing-page.html
@@ -7,7 +7,7 @@
 	<p class="zootopia-cams__intro">Enjoy the sights and sounds of the parks while you stay safe at home. If you’d like to buy a Membership or tickets for a future visit, we would appreciate your support now more than ever</p>
 	<p class="zootopia-cams__note">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
 	<p class="zootopia-cams__sponsored">
-		<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
+		<img src="https://cdn.wcs.org/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
 	</p>
 </div>
 
@@ -20,8 +20,8 @@
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/wmfmcwCvux?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Sea Lion Pool</h3>
 			<p>Tune into feedings daily at 11:00am and 3:00pm EDT</p>
@@ -29,8 +29,8 @@
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Madagascar!</h3>
 			<p>Start your day with lemurs at 10 am EDT!<br><span class="type-small">You may have to refresh your page to start the feed.</span></p>
@@ -38,8 +38,8 @@
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/7r0bBuEdpu?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/934mtctshq_little_blue_cam.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/04/08/934mtctshq_little_blue_cam.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Aquatic Bird House</h3>
 			<p>Tune into feedings daily at 12:30pm and 3:30pm EDT</p>
@@ -56,24 +56,24 @@
 		<div class="zootopia-cams__feed zootopia-cams__feed--down">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/ooqUPX0Pkt?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/05/01/36tddf8t5i_live_cam_sea_otter_off.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/05/01/2bvdaeqatr_live_cam_sea_otter.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/05/01/36tddf8t5i_live_cam_sea_otter_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/05/01/2bvdaeqatr_live_cam_sea_otter.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Sea Cliffs</h3>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/8ypxb4qhil_live_cam_shark_off.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/04/13/8ypxb4qhil_live_cam_shark_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Ocean Wonders: Sharks!</h3>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/zxUH0ETcDK?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/31umtdb2af_live_cam_octopus_off.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/8gtnz1ip2f_live_cam_octopus.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<img src="https://cdn.wcs.org/2020/04/13/31umtdb2af_live_cam_octopus_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://cdn.wcs.org/2020/04/13/8gtnz1ip2f_live_cam_octopus.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Spineless</h3>
 		</div>
@@ -92,7 +92,7 @@
 						<a href="https://bronxzoo.com/shop/catalogs/gifts">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/21kplchfj1_Julie_Larsen_Maher_2714_Teen_Camp_BXR_BZ_08_25_15_1.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/03/30/21kplchfj1_Julie_Larsen_Maher_2714_Teen_Camp_BXR_BZ_08_25_15_1.jpg">
 							</figure>
 						</a>
 					</div>
@@ -108,7 +108,7 @@
 						<a href="https://secure.wcs.org/donate/show-up-for-the-zoo">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/9i6xuvntx_Julie_Larsen_Maher_9862_Visitors_at_Exhibits_JUN_BZ_10_28_17_1.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/03/30/9i6xuvntx_Julie_Larsen_Maher_9862_Visitors_at_Exhibits_JUN_BZ_10_28_17_1.jpg">
 							</figure>
 						</a>
 					</div>
@@ -124,7 +124,7 @@
 						<a href="https://bronxzoo.com/adopt">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/e0czvmw6u_Julie_Larsen_Maher_5504_Little_Penguin_JP_ABH_BZ_12_11_19.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/03/30/e0czvmw6u_Julie_Larsen_Maher_5504_Little_Penguin_JP_ABH_BZ_12_11_19.jpg">
 							</figure>
 						</a>
 					</div>
