--- a/cams.html
+++ b/cams.html
@@ -36,16 +36,16 @@
 			<div class="zootopia-cams__feed zootopia-cams__feed__left">
 				<div class="aspect-16-9 relative">
 					<iframe class="zootopia-cams__feed__embed" type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/wmfmcwCvux?autoplay=1" allowfullscreen="" id="ae_iframe_efsvq70o"></iframe>
-					<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
-					<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+					<img src="https://cdn.wcs.org/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
+					<img src="https://cdn.wcs.org/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 				</div>
 				<h3>Sea Lion Pool</h3>
 			</div>
 			<div class="zootopia-cams__feed zootopia-cams__feed__right">
 				<div class="aspect-16-9 relative">
 					<iframe class="zootopia-cams__feed__embed" type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1" allowfullscreen="" id="ae_iframe_tsh9r9cp"></iframe>
-					<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/8ypxb4qhil_live_cam_shark_off.jpg" align="Our cameras are currently offline. Please check back later">
-					<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+					<img src="https://cdn.wcs.org/2020/04/13/8ypxb4qhil_live_cam_shark_off.jpg" align="Our cameras are currently offline. Please check back later">
+					<img src="https://cdn.wcs.org/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 				</div>
 				<h3>Ocean Wonders: Sharks!</h3>
 			</div>
