--- a/feeds.html
+++ b/feeds.html
@@ -1,59 +1,59 @@
 <div class="section container-full fill-waves-light fill-cloud zootopia-feeds">
 	<div class="container">
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://relay.ozolio.com/pub.api?cmd=embed&oid=EMB_MWXV00000273">
-			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/8tqsgk4wlb_madgascar_cam.jpg');">
+			<div class="zootopia-feeds__item__image" style="background-image: url('https://cdn.wcs.org/2021/05/07/8tqsgk4wlb_madgascar_cam.jpg');">
 			</div>
 			<div class="zootopia-feeds__item__park">Bronx Zoo</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Madagascar!</h3>
 				<h2>Spiny Forest</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<p>The Spiny Forest exhibit is home to ring-tailed and collared brown lemurs, as well as radiated tortoises and a variety of bird species including red fodys. The animals co-exist here just as they would in the wild.</p>
 				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://relay.ozolio.com/pub.api?cmd=embed&oid=EMB_HEQL00000278">
-			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/4yiu2ii5nw_jungleworld_cam.jpg');">
+			<div class="zootopia-feeds__item__image" style="background-image: url('https://cdn.wcs.org/2021/05/07/4yiu2ii5nw_jungleworld_cam.jpg');">
 			</div>
 			<div class="zootopia-feeds__item__park">Bronx Zoo</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>JungleWorld</h3>
-				<h2>Ebony Langurs</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<h2>Silver Leaf Langurs</h2>
+				<p>Grooming each other atop a maze of branches in our Asian jungle, the silver leaf langurs display their close social bonds. The Bronx Zoo is home to the largest breeding population of silver leaf langurs in North America.</p>
 				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://relay.ozolio.com/pub.api?cmd=embed&oid=EMB_ZCWV00000250">
-			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/40cof6d631_penguins_cam.jpg');">
+			<div class="zootopia-feeds__item__image" style="background-image: url('https://cdn.wcs.org/2021/05/07/40cof6d631_penguins_cam.jpg');">
 			</div>
 			<div class="zootopia-feeds__item__park">Bronx Zoo</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Sea Bird Aviary</h3>
-				<h2>Black-footed Penguins</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<h2>Magellanic Penguins</h2>
+				<p>The Russell B. Aitken Sea Bird Aviary is one of the Bronx Zoo’s hidden gems. It’s home to beautiful, mustachioed Inca terns as well as Magellanic penguins and Humboldt brown pelicans. Enjoy spending some time with the birds!</p>
 				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://video.nest.com/embedded/live/wmfmcwCvux?autoplay=1">
-			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/10/9dtg6tuv8y_live_cam_sea_lions_still.jpg');">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			<div class="zootopia-feeds__item__image" style="background-image: url('https://cdn.wcs.org/2021/05/10/9dtg6tuv8y_live_cam_sea_lions_still.jpg');">
+				<img src="https://cdn.wcs.org/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<div class="zootopia-feeds__item__park">Bronx Zoo</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Astor Court</h3>
 				<h2>Sea Lion Pool</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<p>Located right at the heart of the park, our sea lion pool harkens back in time to the zoo’s earliest days. There have been California sea lions at the Bronx Zoo since 1899, and these irrepressible aquatic mammals have always been a favorite around here.</p>
 				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1">
-			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/10/4egda73qp3_live_cam_ows_still.jpg');">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			<div class="zootopia-feeds__item__image" style="background-image: url('https://cdn.wcs.org/2021/05/10/4egda73qp3_live_cam_ows_still.jpg');">
+				<img src="https://cdn.wcs.org/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<div class="zootopia-feeds__item__park">New York Aquarium</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Ocean Wonders: Sharks!</h3>
 				<h2>Canyon's Edge</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<p>You don’t have to hold your breath to enjoy this underwater view, though it may take your breath away! Stare into the deep as sand tiger sharks, sandbar sharks, and rough tail stingrays emerge from the shadows.</p>
 				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
