--- a/intro.html
+++ b/intro.html
@@ -2,5 +2,5 @@
 <div class="zootopia-intro">
 	<h3>Bronx Zoo</h3>
 	<h2>Virtual Zoo</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	<p>Can’t make it to the zoo today? Or maybe you’d like to share an amazing animal experience with friends and family around the world? We’ve got you covered with the Virtual Zoo. Be sure to bookmark this page to keep up with what’s new. </p>
 </div>
