--- a/cams-panel.html
+++ b/cams-panel.html
@@ -4,17 +4,17 @@
 		<p>Check out a few of our favorite hotspots at the zoo: the lemurs at Madagascar!, the langurs in JungleWorld, the penguins in the Sea Bird Aviary, and more.</p>
 		<p><a href="/virtual-zoo/live-cams" class="btn-large btn-fill-tiger">Watch Now</a></p>
 		<div class="zootopia-cams-panel__feed">
-			<a href="/virtual-zoo/live-cams"><img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/8tqsgk4wlb_madgascar_cam.jpg" alt="Spiny Forest"></a>
+			<a href="/virtual-zoo/live-cams"><img src="https://cdn.wcs.org/2021/05/07/8tqsgk4wlb_madgascar_cam.jpg" alt="Spiny Forest"></a>
 			<h4>Madagascar!</h4>
 			<h3>Spiny Forest</h3>
 		</div>
 		<div class="zootopia-cams-panel__feed">
-			<a href="/virtual-zoo/live-cams"><img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/4yiu2ii5nw_jungleworld_cam.jpg" alt="Spiny Forest"></a>
+			<a href="/virtual-zoo/live-cams"><img src="https://cdn.wcs.org/2021/05/07/4yiu2ii5nw_jungleworld_cam.jpg" alt="Spiny Forest"></a>
 			<h4>JungleWorld</h4>
 			<h3>Ebony Langurs</h3>
 		</div>
 		<div class="zootopia-cams-panel__feed">
-			<a href="/virtual-zoo/live-cams"><img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/07/40cof6d631_penguins_cam.jpg" alt="Spiny Forest"></a>
+			<a href="/virtual-zoo/live-cams"><img src="https://cdn.wcs.org/2021/05/07/40cof6d631_penguins_cam.jpg" alt="Spiny Forest"></a>
 			<h4>Sea Bird Aviary</h4>
 			<h3>Penguins</h3>
 		</div>
