--- a/support.html
+++ b/support.html
@@ -1,7 +1,7 @@
 <div class="zootopia-support zootopia-support--blue">
 	<div class="container">
 		<h2>More to (Virtual) Zoo</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+		<p>You can support animals in WCS parks and in the wild around the world without leaving home! There are many ways to get involved and share the gift of wildlife with others virtually.</p>
 		<div class="justify-center container margin-standard-bottom pad-0-horizontal -section grid grid-full grid-medium-half grid-medium-third blocks">
 			<div class="block pad-1-horizontal margin-4-bottom cell ken-burns-hover">
 				<div class="grid">
@@ -9,7 +9,7 @@
 						<a href="/shop/catalogs/virtual-membership">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/11/06/20kgjky5iu_Julie_Larsen_Maher_7168_Breheny_Jim_with_Southern_White_Rhino_ZCR_BZ_11_05_20.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/11/06/20kgjky5iu_Julie_Larsen_Maher_7168_Breheny_Jim_with_Southern_White_Rhino_ZCR_BZ_11_05_20.jpg">
 							</figure>
 						</a>
 					</div>
@@ -25,7 +25,7 @@
 						<a href="/shop/wild-encounters">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/9i6xuvntx_Julie_Larsen_Maher_9862_Visitors_at_Exhibits_JUN_BZ_10_28_17_1.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/03/30/9i6xuvntx_Julie_Larsen_Maher_9862_Visitors_at_Exhibits_JUN_BZ_10_28_17_1.jpg">
 							</figure>
 						</a>
 					</div>
@@ -41,7 +41,7 @@
 						<a href="/adopt">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
-								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/e0czvmw6u_Julie_Larsen_Maher_5504_Little_Penguin_JP_ABH_BZ_12_11_19.jpg">
+								<img class="image-fluid" alt="" itemprop="image" src="https://cdn.wcs.org/2020/03/30/e0czvmw6u_Julie_Larsen_Maher_5504_Little_Penguin_JP_ABH_BZ_12_11_19.jpg">
 							</figure>
 						</a>
 					</div>
